objects/STobj3__c.object
<CustomObject>
    <fields>
        <fullName>f1__c</fullName>
        <label>f1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f2__c</fullName>
        <label>f2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f3__c</fullName>
        <label>f3</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>